Complete fresh backend - all fixes