@@ -8,23 +8,27 @@ import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.List;
-
 @Configuration
 public class CorsConfig {
 
-
-
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-
-        config.setAllowedOrigins(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
+        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedHeaders(Arrays.asList(
+                "Origin","Content-Type","Accept","Authorization",
+                "X-Requested-With","Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+        config.setAllowedMethods(Arrays.asList(
+                "GET","POST","PUT","DELETE","OPTIONS","PATCH"
+        ));
+        config.setExposedHeaders(Arrays.asList("Authorization","Content-Type"));
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
-        return source;
+        return new CorsFilter(source);
     }
 }
